Fix the excess number overflow the display

--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -17,15 +17,12 @@
         width: 100%;
         height: 5rem;
         padding-right: 1rem;
+        font-size: 1.5rem;
         border: solid 2px black;
-        text-align: right;
         display: flex;
         justify-content: flex-end;
         align-items: flex-end;
         overflow: hidden;
-        p {
-          width: 100%;
-        }
       }
 
       .btn-group {
